--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "node-gyp-build": "^4.6.0",
     "serialport": "^12.0.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
